# pop

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  LIST.md  NOTICE  README.md  ROADMAP.md
benchmark/: README.md  (+4 more)
crates/compiler/backends/c/: Cargo.toml
crates/compiler/backends/c/src/: api.rs  emission.rs  lib.rs  lowering.rs  validation.rs
crates/compiler/backends/c/tests/: lowering.rs
crates/compiler/backends/llvm/: Cargo.toml
crates/compiler/backends/llvm/src/: api.rs  async_lowering.rs  bpf.rs  codec.rs  ffi_bytes.rs  ffi_callback.rs  ffi_unsafe.rs  instruction_lowering.rs  lib.rs  lowering.rs  module_lowering.rs  views.rs
crates/compiler/backends/llvm/tests/: bpf.rs  ffi_buffers.rs  ffi_pointers.rs  gc_capabilities.rs  lowering.rs  sequenceLazyExhaustion.pop
crates/compiler/backends/mir-interp/: Cargo.toml
crates/compiler/backends/mir-interp/src/: evaluation.rs  ffi_buffer.rs  interpreter.rs  lib.rs  runtime.rs  values.rs
crates/compiler/backends/mir-interp/tests/: codec.rs  execution.rs  ffi_buffer_marshalling.rs  ffi_buffers.rs  ffi_bytes.rs  ffi_callbacks.rs  language_differential.rs  numeric_differential.rs  runtime_adapter.rs  views.rs
crates/compiler/documentation/: Cargo.toml
crates/compiler/documentation/src/: lib.rs
crates/compiler/documentation/tests/: documentation.rs
crates/compiler/driver/: Cargo.toml
crates/compiler/driver/benches/: compilation.rs  compilation_workload.rs
crates/compiler/driver/src/: api.rs  artifact.rs  attributes.rs  compile_time.rs  front_end.rs  lib.rs  main.rs  native_link.rs  reference.rs  retained_metadata.rs  work.rs
crates/compiler/driver/tests/: checked_nominal_casts.rs  cli_dump.rs  cli_scaffold.rs  compilation_benchmark_contract.rs  compile_time_pipeline.rs  effect_inference.rs  ffi_dependency.rs  ffi_generation.rs  front_end_pipeline.rs  native_exports.rs  native_link_plan.rs  poplib_artifacts.rs  reference_metadata.rs  retained_metadata.rs  view_lifetimes.rs
crates/compiler/hir/: Cargo.toml
crates/compiler/hir/src/: effects.rs  ir.rs  lib.rs  lowering.rs  tests.rs  text.rs  verification.rs
crates/compiler/hir/tests/: hir_construction.rs
crates/compiler/mir/: Cargo.toml
crates/compiler/mir/src/: ffi_callback.rs  ffi_layout.rs  ir.rs  lib.rs  lowering.rs  optimize.rs  render.rs  text.rs  verification.rs
crates/compiler/mir/tests/: ffi_buffer_operations.rs  ffi_bytes_borrows.rs  ffi_callbacks.rs  ffi_layouts.rs  language_contracts.rs  lowering.rs  optimization.rs  runtime_contracts.rs  verification.rs  views.rs
crates/compiler/projects/: Cargo.toml
crates/compiler/projects/src/: lib.rs  lock.rs  manifest.rs
crates/compiler/projects/tests/: lockfile.rs  manifest_and_discovery.rs  native_libraries.rs  ownership.rs
crates/compiler/resolve/: Cargo.toml
crates/compiler/resolve/src/: index.rs  lib.rs  model.rs  resolution.rs
crates/compiler/resolve/tests/: declaration_index.rs  multi_module.rs  visibility.rs
crates/compiler/types/: Cargo.toml
crates/compiler/types/src/: aggregate_checking.rs  arena.rs  attributes.rs  body_checking.rs  bootstrap.rs  call_checking.rs  capture_analysis.rs  classes.rs  field_defaults.rs  inference.rs  interfaces.rs  lib.rs  numeric.rs  operator_checking.rs  required_constants.rs  signature_resolution.rs  statement_checking.rs  typed_body.rs
crates/compiler/types/tests/: architecture_contracts.rs  arena_and_inference.rs  attributes.rs  body_checking.rs  bootstrap.rs  classes.rs  collections.rs  errors.rs  foundational_metadata.rs  interfaces.rs  matches.rs  numeric_values.rs  records.rs  required_constants.rs  signature_resolution.rs  uda_contracts.rs  unions.rs
crates/libraries/internal/: Cargo.toml
crates/libraries/internal/pop/: bubble.toml
crates/libraries/internal/src/: lib.rs  runtime.rs
crates/libraries/internal/tests/: contracts.rs  runtime.rs
crates/libraries/standard/: Cargo.toml
crates/libraries/standard/pop/: bubble.toml
crates/libraries/standard/src/: baseline.rs  lib.rs  math.rs  native_async_net.rs  native_output.rs  sequence.rs  text.rs
crates/libraries/standard/tests/: api_baseline.rs  foundation.rs  foundation_consistency.rs  math.rs  native_output.rs  sequence.rs  text.rs
crates/runtime/collector/: Cargo.toml  README.md
crates/runtime/collector/benches/: bootstrap.rs  relocation.rs  relocation_workload.rs  workload.rs
crates/runtime/collector/src/: access.rs  adapter.rs  arena.rs  heap.rs  lib.rs  ownership.rs  table.rs  trace.rs
crates/runtime/collector/tests/: benchmark_contract.rs  failure.rs  generational_allocation.rs  generational_arenas.rs  generational_epochs.rs  generational_immutability.rs  generational_large_objects.rs  generational_mature.rs  generational_memory.rs  generational_ownership.rs  generational_pinning.rs  generational_regions.rs  generational_schedulers.rs  generational_workers.rs  metrics.rs  native_stable.rs  parallel_scheduler_local.rs  precise_gc.rs  relocating_nursery.rs  relocation_benchmark_contract.rs  task_frame_roots.rs
crates/runtime/native/: Cargo.toml  README.md
crates/runtime/native/benches/: scheduler.rs  scheduler_workload.rs
crates/runtime/native/src/: allocation.rs  binding.rs  codec.rs  failure.rs  ffi_bytes.rs  ffi_callback.rs  foreign.rs  identity.rs  iteration.rs  lib.rs  list.rs  net.rs  range.rs  roots.rs  state.rs  storage.rs  task.rs  text.rs  view.rs
crates/runtime/native/tests/: abi.rs  compiler_task.rs  failure.rs  ffi_callback_abi.rs  foreign_abi.rs  managed_binding_abi.rs  precise_gc.rs  scheduler.rs  scheduler_benchmark_contract.rs  task_abi.rs
crates/tools/formatter/: Cargo.toml
crates/tools/formatter/src/: lib.rs
crates/tools/formatter/tests/: documentation.rs
crates/tools/language-server/: Cargo.toml  README.md
crates/tools/language-server/src/: lib.rs  main.rs  transport.rs
crates/tools/language-server/tests/: documents.rs  localization.rs  transport.rs
crates/tools/test-runner/: Cargo.toml
crates/tools/test-runner/src/: lib.rs
crates/tools/test-runner/tests/: foundation_sources.rs
(+551 files in other folders)
