[package]
name = "pop-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "pop"
path = "src/main.rs"

[[bench]]
name = "compilation"
harness = false

[dependencies]
pop-backend-c.workspace = true
pop-backend-llvm.workspace = true
pop-compile-time.workspace = true
pop-diagnostics.workspace = true
pop-documentation.workspace = true
pop-foundation.workspace = true
pop-hir.workspace = true
pop-library-bridge.workspace = true
pop-mir.workspace = true
pop-runtime-native.workspace = true
pop-standard.workspace = true
pop-target.workspace = true
pop-projects.workspace = true
pop-query.workspace = true
pop-resolve.workspace = true
pop-source.workspace = true
pop-syntax.workspace = true
pop-types.workspace = true

[lints]
workspace = true
