[package]
name = "pop-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
pop-library-bridge.workspace = true
pop-runtime-interface.workspace = true
pop-runtime-native-abi.workspace = true

[lints]
workspace = true
