[package]
name = "pop-standard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
pop-internal.workspace = true
pop-library-bridge.workspace = true
pop-runtime-native.workspace = true

[dev-dependencies]
pop-types.workspace = true

[lints]
workspace = true
