[package]
name = "pop-runtime-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
pop-runtime-collector.workspace = true
pop-runtime-interface.workspace = true
pop-runtime-native-abi.workspace = true

[lints]
workspace = true
