[package]
name = "pop-formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pop-documentation.workspace = true
pop-source.workspace = true
pop-syntax.workspace = true

[dev-dependencies]
pop-foundation.workspace = true

[lints]
workspace = true
