[package]
name = "pop-test-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pop-driver.workspace = true
pop-foundation.workspace = true
pop-mir.workspace = true
pop-projects.workspace = true
pop-source.workspace = true

[lints]
workspace = true
