[package]
name = "pop-backend-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pop-foundation.workspace = true
pop-mir.workspace = true
pop-types.workspace = true

[dev-dependencies]
pop-driver.workspace = true
pop-source.workspace = true

[lints]
workspace = true
