[package]
name = "pop-backend-llvm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
inkwell.workspace = true
pop-backend-api.workspace = true
pop-foundation.workspace = true
pop-mir.workspace = true
pop-runtime-interface.workspace = true
pop-target.workspace = true
pop-types.workspace = true

[dev-dependencies]
pop-driver.workspace = true
pop-foundation.workspace = true
pop-source.workspace = true
pop-runtime-native.workspace = true
pop-types.workspace = true

[lints]
workspace = true
